<resources>
    <string name="app_name">MTracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Logout</string>
    <string name="drawer_open">OPEN</string>
    <string name="drawer_close">CLOSE</string>
    <string name="google_app_id">596968407103</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="auth_type">com.cb.callrecorder</string>
    <string name="content_authority">com.cb.callrecorder</string>
    <string name="title_activity_home">MTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Login</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="text_tryAgain">Try again</string>
    <string name="login">Login</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="audiosource">Audio </string>
    <string name="audioformat">Audio Format</string>
    <string name="syncfrequency">Sync Frequency</string>
    <string name="pref_audiosource_summary">Select audio source to record audio.</string>
    <string name="pref_audioformat_summary">Select audio format.</string>
    <string name="pref_sync_frequency">Select frequency to upload recordings.</string>
    <string name="pref_sync_title_frequency">Frequency</string>
    <string name="audiosourcetitle">Source</string>
    <string name="audioformattitle">Format</string>
    <string name="notification">Notification</string>
    <string name="notify">Notify</string>
    <string name="notify_report_summary">Notify while recording</string>
    <string name="recorsettings">Record Settings (By Admin)</string>
    <string name="pref_record_settings">Enable recording </string>
    <string name="pref_title_record">Recording</string>
    <string name="updatecallList">Update Call List</string>
    <string name="pref_update_call">Monitor Calls (No Recording)</string>
    <string name="pref_title_updateCall">Call Monitor</string>
    <string name="display">Display</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme">preftheme</string>
    <string name="pref_theme_summary">Set app theme</string>
    <string name="no_playstore" />
    <string name="share">Share</string>







    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black</string>
    <string name="theme_sepia">Sepia</string>
    <string name="theme_green">Green</string>
    <string name="theme_solarized_dark">Solarized Dark</string>
    <string name="theme_solarized">Solarized</string>
    <string name="dir_location">Storage Location</string>
    <string name="storage">Storage</string>
    <string name="open">Open</string>

</resources>
